Fix ::selection issue with dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,6 @@ body {
     from { opacity:0; }
     to { opacity: 1; }
 }
-::selection {
-    background-color: #242424;
-    color: lightgrey;
-}
 /* SHADOWS */
 .bottom-shadow {
   -moz-box-shadow: 1px 2px 15px rgba(0,0,0,.42);
